Revert "fixing background image on ios"
This reverts commit 59d325c19bbc174cc203e0f8a95a1f4aead02683.

--- a/css/style.css
+++ b/css/style.css
@@ -527,9 +527,6 @@ footer > .row > div:not(:first-child){
 }
 
 @media only screen and (max-width: 460px) {
-    .aboutusparallax {
-        background-attachment: scroll;
-    }
     .circle{
         width: 70px;
         height: 70px;
